syntax = "proto3";
package MyService;
option go_package = "gateway/myservice/protoservice";

import "annotations.proto";
import "google/protobuf/descriptor.proto";

message Message{
  // 123是标识号，不是赋值，也不是索引
  string id = 1;
  int64 num = 2;
  string lang = 3;
}
message SimpleMessage{
  // 123是标识号，不是赋值，也不是索引
  string id = 1;
  int64 num = 2;
  string lang = 3;
  InnerMsg msg = 4;
}
message InnerMsg{
  string f1 = 1;
  string f2 = 2;
}
service MyService{
  rpc Echo(Message) returns (Message){
//    option (google.api.http)={
//      post:"/v1/echo/{id}";
//      additional_bindings {
//        get:"/v1/echo/{id}"
//      };
//      additional_bindings {
//        get:"/v1/echo/{id}/{num}"
//      };
//    };
  }
  rpc EchoSimple(SimpleMessage) returns (SimpleMessage){
//    option (google.api.http) = {
//      post:"/v1/echo/simple"
//      body:"*"
//      additional_bindings {
//        put:"/v1/echo/simple"
//        // 这里的意思是只接收msg格式的参数，其他格式可以访问，但是不能正确赋值。被嵌套在里层的msg也不行
//        body: "msg"
//      }
//    };
  }
}